Fixed extra space at top

--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -1,13 +1,19 @@
 body{
+   margin: 0px;
    padding-top:0px;
    margin-top: 0px;
+   width: 70%;
+}
+
+header h1{
+    margin:0px;
 }
 
 header a.button {
   position: absolute;
   top: 0;
   right: 0;
-  background: transparent url(../images/github-button.png) 0 0 no-repeat;
+  /*background: transparent url(../images/github-button.png) 0 0 no-repeat;*/
 }
 
 ul.book{margin-bottom:20px;font-size:16px;font-weight:300;line-height:1.4}
